# waltz_robot

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  waltz_robot.py
Research/: simulate_cog_position.py
Research/Videos/: valse_constantin.pt
Research/obtain_kinematics/: README.md
Research/obtain_kinematics_niki/: Readme.md  pos_video.csv  test_niki_results.ipynb
Research/references/: About references.md
Research/robot_animation/: Readme.md  optimal_rotation_matrix.ipynb  optimal_rotation_matrix.py  robot_waltz_animation_other_robot.py
Research/robots/: robot_benchmark.md  show_in_meshcat_humanoids.sh
Research/simulate_cog_position/: simulation.ipynb
Research/testing_results/: test_niki_results.ipynb
Videos/: Plot_kinematics_pose2sim.py  inverse_kinematics_analysis.py  rotation_joints.trc
obtain_kinematics/: README.md
obtain_kinematics/Demo_SinglePerson/: logs.txt
poster/: A0_Bordeaux.tex  Bibliographie.bib  beamercolorthemeMVA.sty  beamerthemegemini.sty  readme.md  waltz_robot_poster.tex
references/: About references.md
report/: Waltz_robot_report.tex  biblio.bib  macros.sty
robot/: Robots_benchmark.py  show_in_meshcat_humanoids.sh
robot_animation/: Plot_kinematics_pose2sim.py  optimal_rotation_matrix.ipynb  robot_waltz_animation.py  robot_waltz_from_niki.py  robot_waltz_perso.py  test.py
robots/: Robots_benchmark.py  show_joints_robots.py
simulate_cog_position/: simulation.ipynb
src/: bpm_detection.py  element_positions.csv  music_lenght_detection.py  plot_trajectories.py  robot_waltz_from_niki.py
(+437 files in other folders)
