[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Waltz_robot"
version = "0.1.0"
authors = [
  { name="Constantin Vaillant Tenzer", email="constantin.tenzer@ens.psl.eu" },
  { name="Constantin Vaillant Tenzer", email="constantin.tenzer@ens.psl.eu" }
]
description = "Inverse dynamics estimation from monocular videos"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cvt8/waltz_robot"
"Bug Tracker" = "https://github.com/cvt8/waltz_robot/issues"